--- a/1491. Average Salary Excluding the Minimum and Maximum Salary.ipynb
+++ b/1491. Average Salary Excluding the Minimum and Maximum Salary.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def average(self, salary: List[int]) -> float:\n",
+    "def average(self, salary: list[int]) -> float:\n",
     "        return (sum(salary) - min(salary) - max(salary))/(len(salary)-2)"
    ]
   },
@@ -137,7 +137,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
